# StaticMode

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
docs/: MSVC-2015.md
docs/melb-cpp-talk-feb-2017/: 00-intro.md  01-my-motivation.md  02-hello-world.cpp  03-running-example.cpp  20-one-mode.cpp  20a-one-mode.h  20b-one-mode.h  20c-one-mode.h  20d-one-mode.h  21-refine-one-mode-consolidated.cpp  22-refine-one-mode-template.cpp  23-refine-one-mode-defaults.cpp  24a-cpp17-auto-template-parameter.cpp  24b-refine-one-mode-integral-constant.cpp  26-two-modes.cpp  27-two-modes-alt-impls.cpp  30-mode-expressions.md  31-exprs-sketch.cpp  32-mode-set-exprs.cpp  33-get-mode.cpp  34-demo-1.cpp  35-typechecking-tools.h  35-typechecking.cpp  40-conclusions.md  81-extra-static-checks-runtime-values-poc.cpp  82-extra-type-erasure.cpp  99-ref-constexpr.md  99-ref-integral_constant.md  99-ref-main.md  README.md  postmortem.md
examples/: CMakeLists.txt  minimal.cpp  required-mode.cpp  two-modes-1.cpp  two-modes-2.cpp  type-erasure.cpp
include/: StaticMode.h
test/: CMakeLists.txt  StaticMode_test.cpp
test/Catch/: catch.hpp
